# exphora_db

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  build_release.bat  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json  main.json
icons/: icon.icns
landing/.github/workflows/: deploy.yml
landing/src/components/: Changelog.astro  Download.astro  Hero.astro
landing/src/pages/: index.astro
src/: app.rs  config.rs  expr.rs  filters.rs  main.rs  models.rs  parser.rs
src/commands/: calc_ops.rs  export_ops.rs  file_ops.rs  filter_ops.rs  mod.rs  p2p_ops.rs  view_ops.rs
src/p2p/: compress.rs  discovery.rs  mod.rs  nat.rs  protocol.rs  shard.rs  store.rs  transfer.rs
src/ui/: columns.rs  detail.rs  mod.rs  sidebar.rs  stats.rs  table.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/charts/: FrequencyChart.tsx
ui/src/components/layout/: Sidebar.tsx  TabBar.tsx  TopBar.tsx
ui/src/components/modals/: ColumnPickerModal.tsx  ExportPickerModal.tsx  RecordDetailsModal.tsx  RelinkModal.tsx
ui/src/components/notes/: NoteFloatingWindow.tsx  NotesPanel.tsx
ui/src/components/p2p/: P2PPanel.tsx
ui/src/components/settings/: SettingsWindow.tsx
ui/src/components/stats/: StatsPanel.tsx
ui/src/components/table/: DataTable.tsx  FilterPanel.tsx
ui/src/config/: shortcuts.ts
ui/src/hooks/: useDataset.ts  useFilters.ts  useFocusTrap.ts  useStats.ts
ui/src/store/: appStore.ts
ui/src/types/: index.ts
